fix popup foreground color on small breakpoint

--- a/ui/client-react/src/components/facet/facet.scss
+++ b/ui/client-react/src/components/facet/facet.scss
@@ -221,10 +221,12 @@
         input {
             color: $search-input-fg;
         }
+
         .popover-content {
             max-height: 454px;
         }
         .facetMenuPopup {
+            color: $popup-fg;
             display: block;
             left: -140px;
             min-width: 150px;
